--- a/TRail/Base.lproj/Main.storyboard
+++ b/TRail/Base.lproj/Main.storyboard
@@ -273,7 +273,7 @@
                                 <color key="tintColor" red="0.0" green="0.74901960779999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yks-67-5I9">
-                                <rect key="frame" x="26" y="587" width="323" height="50"/>
+                                <rect key="frame" x="16" y="587" width="343" height="50"/>
                                 <color key="backgroundColor" red="1" green="0.6470588235294118" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="hBG-z8-ZhP"/>
@@ -287,7 +287,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pdZ-7X-hXo">
-                                <rect key="frame" x="26" y="527" width="323" height="50"/>
+                                <rect key="frame" x="16" y="527" width="343" height="50"/>
                                 <color key="backgroundColor" red="0.4823529412" green="0.40784313729999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="RlH-nH-1mm"/>
@@ -318,22 +318,22 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="qBt-W7-ikW" secondAttribute="trailing" id="0Zh-1p-Os4"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="yks-67-5I9" secondAttribute="trailing" constant="10" id="4jm-sf-J0K"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yks-67-5I9" secondAttribute="trailing" id="4jm-sf-J0K"/>
                             <constraint firstItem="5Nj-VF-xkN" firstAttribute="top" secondItem="8oM-6A-T4N" secondAttribute="bottom" constant="10" id="Cxe-v9-6yf"/>
                             <constraint firstItem="dYV-WT-IEq" firstAttribute="top" secondItem="qBt-W7-ikW" secondAttribute="bottom" constant="10" id="EWt-FE-FG1"/>
                             <constraint firstItem="8oM-6A-T4N" firstAttribute="top" secondItem="dYV-WT-IEq" secondAttribute="bottom" constant="30" id="Gua-em-azx"/>
                             <constraint firstItem="yks-67-5I9" firstAttribute="top" secondItem="pdZ-7X-hXo" secondAttribute="bottom" constant="10" id="JZo-c4-YEG"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dYV-WT-IEq" secondAttribute="trailing" id="KGY-Q9-39Y"/>
-                            <constraint firstItem="pdZ-7X-hXo" firstAttribute="leading" secondItem="pft-Sy-K2x" secondAttribute="leadingMargin" constant="10" id="Ouz-gi-TBU"/>
+                            <constraint firstItem="pdZ-7X-hXo" firstAttribute="leading" secondItem="pft-Sy-K2x" secondAttribute="leadingMargin" id="Ouz-gi-TBU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ZXa-4O-3Oq" secondAttribute="trailing" id="Q2p-Ra-htZ"/>
                             <constraint firstItem="8oM-6A-T4N" firstAttribute="leading" secondItem="pft-Sy-K2x" secondAttribute="leadingMargin" id="Szp-8O-wg8"/>
                             <constraint firstItem="dYV-WT-IEq" firstAttribute="leading" secondItem="pft-Sy-K2x" secondAttribute="leadingMargin" id="Vma-pA-JpN"/>
                             <constraint firstItem="qBt-W7-ikW" firstAttribute="leading" secondItem="pft-Sy-K2x" secondAttribute="leadingMargin" id="WWA-Hg-9Uw"/>
                             <constraint firstItem="Ecl-ik-Hbs" firstAttribute="leading" secondItem="pft-Sy-K2x" secondAttribute="leadingMargin" id="XTV-zN-vMT"/>
                             <constraint firstItem="0Ro-tl-qhi" firstAttribute="top" secondItem="yks-67-5I9" secondAttribute="bottom" constant="30" id="cdY-EQ-FKp"/>
-                            <constraint firstItem="yks-67-5I9" firstAttribute="leading" secondItem="pft-Sy-K2x" secondAttribute="leadingMargin" constant="10" id="dSC-SD-Y6P"/>
+                            <constraint firstItem="yks-67-5I9" firstAttribute="leading" secondItem="pft-Sy-K2x" secondAttribute="leadingMargin" id="dSC-SD-Y6P"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ecl-ik-Hbs" secondAttribute="trailing" id="f8d-fG-E1z"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="pdZ-7X-hXo" secondAttribute="trailing" constant="10" id="h9i-n6-xQA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pdZ-7X-hXo" secondAttribute="trailing" id="h9i-n6-xQA"/>
                             <constraint firstItem="Ecl-ik-Hbs" firstAttribute="top" secondItem="ZXa-4O-3Oq" secondAttribute="bottom" constant="10" id="iJR-Pb-I6a"/>
                             <constraint firstItem="5Nj-VF-xkN" firstAttribute="leading" secondItem="pft-Sy-K2x" secondAttribute="leadingMargin" id="ijB-KY-JE2"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8oM-6A-T4N" secondAttribute="trailing" id="nwh-52-0EM"/>
@@ -565,7 +565,7 @@
                                 <color key="tintColor" red="1" green="0.64705882349999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e7s-23-O9q">
-                                <rect key="frame" x="26" y="587" width="323" height="50"/>
+                                <rect key="frame" x="16" y="587" width="343" height="50"/>
                                 <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="KXC-qK-cmv"/>
@@ -579,7 +579,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rkQ-ua-F3M">
-                                <rect key="frame" x="26" y="527" width="323" height="50"/>
+                                <rect key="frame" x="16" y="527" width="343" height="50"/>
                                 <color key="backgroundColor" red="0.4823529412" green="0.40784313729999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="BFV-Xr-AY8"/>
@@ -608,10 +608,10 @@
                         <constraints>
                             <constraint firstItem="XJU-bz-IxJ" firstAttribute="leading" secondItem="blD-gu-a4V" secondAttribute="leadingMargin" id="1la-pt-XdF"/>
                             <constraint firstItem="7C5-da-v1T" firstAttribute="leading" secondItem="blD-gu-a4V" secondAttribute="leadingMargin" id="4Mq-Do-ikv"/>
-                            <constraint firstItem="e7s-23-O9q" firstAttribute="leading" secondItem="blD-gu-a4V" secondAttribute="leadingMargin" constant="10" id="5En-ah-0jH"/>
+                            <constraint firstItem="e7s-23-O9q" firstAttribute="leading" secondItem="blD-gu-a4V" secondAttribute="leadingMargin" id="5En-ah-0jH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="rkQ-ua-F3M" secondAttribute="trailing" constant="10" id="8EX-7u-L2W"/>
                             <constraint firstItem="7C5-da-v1T" firstAttribute="top" secondItem="zIU-NO-nfp" secondAttribute="bottom" constant="10" id="Feh-Qx-Mq1"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="rkQ-ua-F3M" secondAttribute="trailing" constant="10" id="HPR-Z9-RtK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="rkQ-ua-F3M" secondAttribute="trailing" id="HPR-Z9-RtK"/>
                             <constraint firstItem="s71-QN-B0O" firstAttribute="top" secondItem="e7s-23-O9q" secondAttribute="bottom" constant="30" id="J4q-Ka-FTq"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2Uh-SN-GtQ" secondAttribute="trailing" id="LLY-Au-qTE"/>
                             <constraint firstItem="XJU-bz-IxJ" firstAttribute="top" secondItem="Yzz-VS-z6d" secondAttribute="bottom" constant="30" id="PMH-d7-eae"/>
@@ -621,12 +621,12 @@
                             <constraint firstItem="e7s-23-O9q" firstAttribute="top" secondItem="rkQ-ua-F3M" secondAttribute="bottom" constant="10" id="YxV-Wo-1z4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="WpD-W1-AEA" secondAttribute="trailing" id="ZZe-ge-srI"/>
                             <constraint firstItem="Yzz-VS-z6d" firstAttribute="top" secondItem="WpD-W1-AEA" secondAttribute="bottom" constant="10" id="adE-FJ-Baz"/>
-                            <constraint firstItem="rkQ-ua-F3M" firstAttribute="leading" secondItem="blD-gu-a4V" secondAttribute="leadingMargin" constant="10" id="apK-al-dBK"/>
+                            <constraint firstItem="rkQ-ua-F3M" firstAttribute="leading" secondItem="blD-gu-a4V" secondAttribute="leadingMargin" id="apK-al-dBK"/>
                             <constraint firstItem="2Uh-SN-GtQ" firstAttribute="top" secondItem="XJU-bz-IxJ" secondAttribute="bottom" constant="10" id="b4h-6e-Rpm"/>
                             <constraint firstAttribute="trailingMargin" secondItem="rkQ-ua-F3M" secondAttribute="trailing" constant="10" id="cj2-S8-xx9"/>
                             <constraint firstItem="zIU-NO-nfp" firstAttribute="top" secondItem="9CN-ie-kC2" secondAttribute="bottom" constant="30" id="fQ7-9C-7IQ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="XJU-bz-IxJ" secondAttribute="trailing" id="j1j-sR-BN8"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="e7s-23-O9q" secondAttribute="trailing" constant="10" id="j7v-Jw-p2w"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="e7s-23-O9q" secondAttribute="trailing" id="j7v-Jw-p2w"/>
                             <constraint firstAttribute="trailingMargin" secondItem="zIU-NO-nfp" secondAttribute="trailing" id="m3h-E0-gJM"/>
                             <constraint firstItem="zIU-NO-nfp" firstAttribute="leading" secondItem="blD-gu-a4V" secondAttribute="leadingMargin" id="uOR-Ap-qxU"/>
                             <constraint firstItem="WpD-W1-AEA" firstAttribute="top" secondItem="7C5-da-v1T" secondAttribute="bottom" constant="30" id="uTQ-Js-YRA"/>
@@ -751,7 +751,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="irj-ae-M8k">
-                                <rect key="frame" x="26" y="587" width="323" height="50"/>
+                                <rect key="frame" x="16" y="587" width="343" height="50"/>
                                 <color key="backgroundColor" red="0.4823529411764706" green="0.40784313725490196" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="x05-u6-vwX"/>
@@ -787,8 +787,8 @@
                             <constraint firstItem="c3j-Tu-nOL" firstAttribute="top" secondItem="irj-ae-M8k" secondAttribute="bottom" constant="30" id="DMf-UK-sLN"/>
                             <constraint firstItem="br6-k3-Sa4" firstAttribute="top" secondItem="Ldl-sa-3fb" secondAttribute="bottom" constant="10" id="Dae-VZ-Jkk"/>
                             <constraint firstItem="br6-k3-Sa4" firstAttribute="leading" secondItem="WNI-XF-vAe" secondAttribute="leadingMargin" id="J0m-c6-IR2"/>
-                            <constraint firstItem="irj-ae-M8k" firstAttribute="leading" secondItem="WNI-XF-vAe" secondAttribute="leadingMargin" constant="10" id="KXD-bx-RbK"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="irj-ae-M8k" secondAttribute="trailing" constant="10" id="M99-Pk-DFf"/>
+                            <constraint firstItem="irj-ae-M8k" firstAttribute="leading" secondItem="WNI-XF-vAe" secondAttribute="leadingMargin" id="KXD-bx-RbK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="irj-ae-M8k" secondAttribute="trailing" id="M99-Pk-DFf"/>
                             <constraint firstAttribute="trailingMargin" secondItem="br6-k3-Sa4" secondAttribute="trailing" id="Mmo-fN-pi5"/>
                             <constraint firstItem="Clf-k8-aQk" firstAttribute="leading" secondItem="WNI-XF-vAe" secondAttribute="leadingMargin" id="N2k-Uo-wXk"/>
                             <constraint firstAttribute="trailingMargin" secondItem="uzO-pU-H0h" secondAttribute="trailing" id="ZpT-Rx-0aT"/>
